# mindvault

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: README.md
backend/app/: __init__.py  main.py
backend/app/api/: README.md
backend/app/api/dependencies/: README.md
backend/app/api/v1/: README.md  router.py
backend/app/api/v1/endpoints/: __init__.py  health.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/database/: base.py  session.py
backend/app/database/models/: README.md
backend/app/domains/auth/: README.md
backend/app/domains/documents/: README.md
backend/app/domains/processing/: README.md
backend/app/domains/users/: README.md
backend/app/domains/workspaces/: README.md
backend/app/infrastructure/embeddings/: README.md
backend/app/infrastructure/llm/: README.md
backend/app/infrastructure/queue/: README.md
backend/app/infrastructure/storage/: README.md
backend/app/infrastructure/transcription/: README.md
backend/app/schemas/: __init__.py  error.py  health.py
backend/app/tests/: README.md
backend/app/workers/: README.md
backend/tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_logging.py
backend/tests/api/: test_health.py
docs/: PROJECT_PLAN.md
docs/adr/: ADR-001-modular-monolith.md  ADR-002-postgresql-vector-jobs.md  (+12 more)
frontend/: Dockerfile  README.md  package.json  vite.config.ts
(+69 files in other folders)
